--- a/scripts/css/variables.scss
+++ b/scripts/css/variables.scss
@@ -7,33 +7,14 @@ $xl-min: 1200px;
 $xl-max: 1309px;
 
 /* colors */
-$themeBorderColor: #ebebeb;
 $themecolor: #404159;
-$themeHeadingcolor: rgba(43, 44, 59, 0.9); // #2b2c3b;
+$themeHeadingcolor: rgba(43, 44, 59, 0.7);
 
-// $themecolorCoral: #f99a9c;
-// $themecolorPink: #fdbccf; //#fdbccf; //
-// $themecolorPurple: #d3c0f9; //#eabcfd; //
-// $themecolorGreen: #d7e7a9; // #b5ddd1; // #cffdbc; //;
-
-$themecolorCoral: #fdc4b5;
-$themecolorPink: #fdbccf;
-$themecolorPurple: #eabcfd;
-$themecolorGreen: #cffdbc;
-$themecolorBlue: #bcf0fd;
-
-// $themecolorCoral: #f7d3bb;
-// $themecolorCoral: #bbc1f7;
-
-// $themecolorPink: #f7bbdf;
-// $themecolorPurple: #bbc1f7;
-// $themecolorPurple: #bbdff7;
-
-// $themecolorGreen: #bbf7d3;
-// $themecolorBlue: #bbdff7;
-
-/* fonts */
-//$themefont: "Roboto", "Helvetica", sans-serif;
+$themecolorCoral: #f99fa0;
+$themecolorPink: #fdcedc;
+$themecolorPurple: #ded0fb;
+$themecolorGreen: #b9dfd4;
+$themecolorBlue: #1183ee;
 
 $themeBorder_radius: 5px;
 $themeBox_shadow: 0 7px 34px 0 rgba(0, 0, 0, 0.07),
