--- a/scripts/css/variables.scss
+++ b/scripts/css/variables.scss
@@ -9,12 +9,14 @@ $xl-max: 1309px;
 /* colors */
 $themecolor: #404159;
 $themeHeadingcolor: rgba(43, 44, 59, 0.8);
+$themeBorderColor: #e1e1e1;
 
 $themecolorCoral: #f99fa0;
 $themecolorPink: #fdcedc;
 $themecolorPurple: #ded0fb;
 $themecolorGreen: #b9dfd4;
 $themecolorBlue: #1183ee;
+$themecolorLightGreen: #d7e7a9;
 
 $themeBorder_radius: 5px;
 $themeBox_shadow: 0 7px 34px 0 rgba(0, 0, 0, 0.07),
